--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.9.0",
     "@tailwindcss/vite": "^4.0.0",
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
